# elementary-notes

./: .gitignore  CMakeLists.txt  README.txt  build.sh
data/: CMakeLists.txt  keep.desktop  keep.desktop.in
data/style/: elements.css
po/: keep.pot
schemas/: CMakeLists.txt  org.pantheon.model.gschema.xml
src/: CMakeLists.txt  Config.vala  Config.vala.cmake  Keep.vala
src/Core/: Database.vala  DatabaseManager.vala  Note.vala  NoteManager.vala
src/Services/: StyleManager.vala
src/Widgets/: Editor.vala  EditorView.vala  FormatPopover.vala  KeepHeaderBar.vala  Sidebar.vala  Toolbar.vala
src/Window/: HeaderBarWindow.vala  MainWindow.vala
